# BytePack

./: .gitignore  CMakeLists.txt  README.md  library.json  library.properties  platformio.ini
.github/ISSUE_TEMPLATE/: config.yml
examples/Basic/: Basic.ino
examples/BasicNative/: BasicNative.cpp
examples/CustomTypes/: CustomTypes.ino
examples/Dispatch/: Dispatch.ino
examples/MessageHeader/: MessageHeader.ino
examples/NestedMessages/: NestedMessages.ino
examples/SizeBudget/: SizeBudget.ino
examples/WriterReader/: WriterReader.ino
src/: BytePack.h
test/: test_bytepack.cpp
